objects/Why_Not_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Alt_Policy_1_Label__c</fullName>
        <label>Alt Policy 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Policy_2_Label__c</fullName>
        <label>Alt Policy 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Policy_3_Label__c</fullName>
        <label>Alt Policy 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_Policy_Label__c</fullName>
        <label>Ignore Availability Policy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Policy_Label__c</fullName>
        <label>Main Policy Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FSL Rule Analyzer Settings</label>
    <pluralLabel>FSL Rule Analyzer Settings</pluralLabel>
</CustomObject>